# RBE3002_turtlebot3

./: CMakeLists.txt  package.xml
config/: default.rviz
launch/: a_star_pathing.launch  final_frontier.launch  gazebo_rviz_mapping.launch  maze_sim.launch  practice_maze.launch  rviz_mapping.launch  turtle_slam.launch
maps/: sim_frontier.yaml
src/lab02/: Robot.py
src/lab03/: A_Star.py  Nav_astar_path.py  PriorityQueue.py  map_helper.py
src/lab04/: Controller.py  Expand_Map.py  Frontier_Finder.py  run_gmapping.sh
srv/: FrontierRequest.srv  MakePath.srv  RobotNav.srv
